Enum role {
  ADMIN
  USER
}

Enum login_type {
  LOCAL
  SOCIAL
}

Table member {
  id bigint [pk, increment]
  nickname varchar(100) [not null]
  password varchar [not null]
  email varchar [not null, unique]
  role role [not null]
  provider varchar
  provider_id varchar
  login_type login_type
  created_at datetime
  created_by varchar [not null]
  updated_at datetime
  updated_by varchar [not null]
}

Table post {
  id bigint [pk, increment]
  title varchar(500) [not null]
  content varchar(500) [not null]
  view_count int [not null, default: 0]
  member_id bigint [not null]
  created_at datetime
  created_by varchar [not null]
  updated_at datetime
  updated_by varchar [not null]
}

Table comment {
  id bigint [pk, increment]
  content varchar(500) [not null]
  member_id bigint [not null]
  post_id bigint [not null]
  parent_id bigint
  created_at datetime
  created_by varchar [not null]
  updated_at datetime
  updated_by varchar [not null]
}

Ref: post.member_id > member.id
Ref: comment.member_id > member.id
Ref: comment.post_id > post.id
Ref: comment.parent_id > comment.id
